# discord_to_slack

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
discord_forum_slack/: __init__.py  __main__.py  bot.py  config.py  slack.py
